Update main.css to prevent double scroll bar. v0.2.2

--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
     width: 25rem;
     height: 35rem;
+    max-height: calc(600px - 3.5rem);
 }
 
 button.btn-main {
